[metadata]
name = plt-wrapper
version = 0.0.2
author = Aleix BOQUET-PUJADAS
description = A matplotib.pyplot wrapper for gpu arrays (cupy, pytorch, etc.) without any of the .get / .detach / .cpu abracadabra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleixBP/plt
project_urls =
    Bug Tracker = https://github.com/AleixBP/plt/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

license = MIT

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True
